--- a/src/main/resources/static/css/intro.css
+++ b/src/main/resources/static/css/intro.css
@@ -2,7 +2,7 @@
     display: flex; /* 컨텐츠와 이미지를 수평으로 배치 */
     justify-content: flex-start; /* 왼쪽 정렬 */
     align-items: center;
-    color: white;
+    color: black;
     padding-right: 100px;
     padding-left: 300px;
     height: 45vh; /* 섹션의 높이를 화면 크기로 설정 */
