-회원 정보 조회 페이지(챗봇 추가)

--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -6,6 +6,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
+    <link th:href="@{/css/chatbot.css}" rel="stylesheet">
 </head>
 <body>
 <!-- data-member-id 설정 -->
@@ -93,9 +94,9 @@
     </div>
 </nav>
 
-<div class="container mt-5">
+<div class="container mt-2">
     <div class="profile-header">
-        <h2 class="text-center">회원 정보</h2><br>
+        <h2 class="text-center">회원 정보</h2>
     </div>
 
     <div class="row">
@@ -268,5 +269,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  <!-- Bootstrap JS -->
 <script src="/js/member/member.js"></script>
 <script src="/js/token/token.js"></script>
+<script src="/js/chatbot/chatbot.js"></script>
 </body>
 </html>
